force-app/idp/main/default/objects/IDP_Value_Map_Entry__mdt/IDP_Value_Map_Entry__mdt.object-meta.xml
<CustomObject>
    <label>IDP Value Map Entry</label>
    <pluralLabel>IDP Value Map Entries</pluralLabel>
    <description>One document-text to stored-value pair of a ValueMap-kind IDP Value Type, e.g. "Pty Ltd" / "(PTY) LTD" / "Proprietary Limited" all mapping to the picklist value "Private Company".</description>
</CustomObject>