force-app/idp/main/default/objects/IDP_Value_Map_Entry__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Untick to disable this entry without deleting it.</description>
</CustomField>