force-app/idp/main/default/objects/IDP_Value_Map_Entry__mdt/fields/From_Text__c.field-meta.xml
<CustomField>
    <fullName>From_Text__c</fullName>
    <label>From Text</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>What the document says, matched per Match Style: literal text (Exact/Normalized) or a regular expression (Regex).</description>
</CustomField>