force-app/idp/main/default/objects/IDP_Value_Map_Entry__mdt/fields/Match_Style__c.field-meta.xml
<CustomField>
    <fullName>Match_Style__c</fullName>
    <label>Match Style</label>
    <type>Picklist</type>
    <description>How From Text is matched against the document value. Normalized (the default) trims, collapses whitespace and ignores case.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normalized</fullName>
                <default>true</default>
                <label>Normalized</label>
            </value>
            <value>
                <fullName>Exact</fullName>
            </value>
            <value>
                <fullName>Regex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>