force-app/idp/main/default/objects/IDP_Value_Map_Entry__mdt/fields/To_Value__c.field-meta.xml
<CustomField>
    <fullName>To_Value__c</fullName>
    <label>To Value</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The stored value, e.g. the picklist API name.</description>
</CustomField>