force-app/idp/main/default/objects/IDP_Value_Map_Entry__mdt/fields/Value_Map__c.field-meta.xml
<CustomField>
    <fullName>Value_Map__c</fullName>
    <label>Value Map</label>
    <type>MetadataRelationship</type>
    <referenceTo>IDP_Value_Type__mdt</referenceTo>
    <relationshipLabel>Map Entries</relationshipLabel>
    <relationshipName>Map_Entries</relationshipName>
    <required>true</required>
    <description>The ValueMap-kind IDP Value Type this entry belongs to.</description>
</CustomField>